<resources>
    <string name="app_name">Itercorp App Challenge</string>
    <string name="facebook_app_id">1525584597790067</string>
    <string name="fb_login_protocol_scheme">fb1525584597790067</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="fecha_nacimiento">Fecha nacimiento</string>
    <string name="edad">Edad</string>
    <string name="apellido">Apellido</string>
    <string name="nombre">Nombre</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="crear">Crear cliente</string>
    <string name="google">Google</string>


    <string name="session_pref">sessionLogin</string>
    <string name="ingrese_su_n_mero_de_tel_fono">Ingrese su número de teléfono</string>
    <string name="ingrese_c_digo">Ingrese código</string>

</resources>