<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



        <EditText
            android:id="@+id/email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:layout_margin="20dp"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/passwprd_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_margin="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_login" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/button1"
        android:text="@string/login"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="@+id/passwprd_login"
        app:layout_constraintTop_toBottomOf="@+id/passwprd_login" />

    <Button
        android:id="@+id/button_registrar"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/button2"
        android:text="@string/sign_up"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/passwprd_login"
        app:layout_constraintTop_toBottomOf="@+id/passwprd_login" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/googleg_standard_color_18"
        android:text="@string/google"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_phone"
        android:text="Phone"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login_google" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_fb_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login_phone" />


</androidx.constraintlayout.widget.ConstraintLayout>